# analogue

./: README.md  pyproject.toml  requirements.txt
Const/: GLB.Ts+dSST.txt  SH.Ts+dSST.txt  analogue_config.yaml  env_setting.sh  extreme_events.yaml  nina34.anom.data  pdo.timeseries.sstens.data  peninsula_domain_masks.nc  preprocess_config.yaml  sam.20crv2c.short.data  sam_indices_era5.csv
Data/: download.py  download_slurm.sh
Data/F02_analogue_search/era5/antarctica_peninsula_2015/: analogues.csv  analogues_1000km.csv  analogues_1100km.csv  analogues_1300km.csv  analogues_1500km.csv  analogues_500km.csv  analogues_600km.csv  analogues_700km.csv  analogues_800km.csv  analogues_900km.csv
Data/F02_analogue_search/era5/antarctica_peninsula_2020/: analogues.csv  analogues_1000km.csv  analogues_1100km.csv  analogues_1300km.csv  analogues_1500km.csv  analogues_500km.csv  analogues_600km.csv  analogues_700km.csv  analogues_800km.csv  analogues_900km.csv  analogues_gauss10.csv
Data/F02_analogue_search/era5/antarctica_peninsula_2022/: analogues.csv  analogues_1000km.csv  analogues_1100km.csv  analogues_1300km.csv  analogues_1500km.csv  analogues_500km.csv  analogues_600km.csv  analogues_700km.csv  analogues_800km.csv  analogues_900km.csv  analogues_gauss13.csv  analogues_gauss16.csv  analogues_gauss19.csv  (+3 more)
GrADS/: cbarn.gs  close_all.gs  colors.gs  plot_Tsurf.gs  plot_Tsurfdiff.gs  plot_Tsurfdiff_files.gs  plot_psurf_anomaly.gs  plot_spaghetti.gs  plot_synoptic.gs  stipple.gs
Python/: __init__.py  analogue_search.py  analogue_weights.py  bump_ranking.py  cdo_slice.py  cvm_test.py  dask_slice.py  data_utils.py  download_era5_slices.py  make_index_scatter.py  plot_t2m_boxplot.py  preprocess.py  preprocess_era5.py  preprocess_jra3q.py  select_analogues_from_distances.py  spatial_weights.py  test_lsm_t2m_coords.py  vertical_cross_section_2015.py  vertical_cross_section_2020.py  vertical_cross_section_2022.py  vertical_cross_section_generic.py
Sh/: F01_download_era5.sh  F01_download_era5_slurm.sh  F01_preprocess.sh  F01_preprocess_jra3q.sh  F01_preprocess_jra3q_slurm.sh  F01_preprocess_slurm.sh  F02_analogue_search_slurm.sh  F03_snapshots.sh  F03_spaghetti.sh  F03_visualization.sh  F03_visualization_slurm.sh  F04_vertical_cross_section.sh  Tsurfdiff.sh  cvm_test.sh  index_scatter.sh  preprocess_era5_slurm.sh  preprocess_jra3q_slurm.sh  preprocess_mswx_slurm.sh  run_pipeline.sh  snapshots.sh  spaghetti.sh  t2m_boxplot.sh
