[tool.poetry]
name = "analogue-weather-analysis"
version = "0.1.0"
description = "Analogue weather analysis following ClimaMeter/Ferranti methodology"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "Python"}]

[tool.poetry.dependencies]
python = "^3.8"

# Core scientific computing
numpy = "^1.20.0"
scipy = "^1.7.0"
pandas = "^1.3.0"

# NetCDF and climate data handling
xarray = "^0.19.0"
netCDF4 = "^1.5.0"
dask = {extras = ["complete"], version = "^2021.6.0"}

# Configuration
pyyaml = "^5.4.0"

[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
matplotlib = "^3.4.0"
cartopy = "^0.19.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
