[tool.poetry]
name = "analogue-weather-analysis"
version = "0.1.0"
description = "Analogue weather analysis following ClimaMeter/Ferranti methodology"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "Python"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"

# Core scientific computing
numpy = "^1.26.0"
scipy = "^1.11.0"
pandas = "^2.2.0"

# NetCDF and climate data handling
xarray = "^2024.1.0"
netCDF4 = "^1.6.5"
dask = {extras = ["complete"], version = "^2024.1.0"}

# Configuration
pyyaml = "^6.0.0"

# Visualization (F03 Python plots)
matplotlib = "^3.8.0"
cartopy = "^0.23.0"

# ECMWF/CDS downloader client (F01 download). Pure-Python, no heavy
# binary dependencies -- safe to keep in the core environment.
cdsapi = "^0.7.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
